deployments set up

--- a/@latest/package.json
+++ b/@latest/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "-latest",
+  "name": "phoeze-collections",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,8 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "vite build && gh-pages -d dist"
   },
+  "homepage": "https://uyanda-shabalala.github.io/Phoeze-collections",
   "dependencies": {
     "framer-motion": "^12.23.6",
     "react": "^19.1.0",
